--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       .starter {
         text-align: center;
       }
-</style>
+    </style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -28,5 +28,14 @@
       <h5><a href="0.6.0-SNAPSHOT/index.html">0.6.0-SNAPSHOT</a></h5>
       <h5><a href="0.5.1/index.html">0.5.1</a></h5>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-70923628-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
