--- a/0.5.1/reagent.debug.html
+++ b/0.5.1/reagent.debug.html
@@ -11,4 +11,13 @@ as well as package name and line number. Returns x.</pre></div></div><div class=
 nice clickable links to source in modern browsers).</pre></div></div><div class="public anchor" id="var-prn"><h3>prn</h3><h4 class="type">macro</h4><div class="usage"><code>(prn &amp; forms)</code></div><div class="doc"><pre class="plaintext">Like standard prn, but prints using console.log (so that we get
 nice clickable links to source in modern browsers).</pre></div></div><div class="public anchor" id="var-warn"><h3>warn</h3><h4 class="type">macro</h4><div class="usage"><code>(warn &amp; forms)</code></div><div class="doc"><pre class="plaintext">Print with console.warn.
 </pre></div></div><div class="public anchor" id="var-warn"><h3>warn</h3><h4 class="type">macro</h4><div class="usage"><code>(warn &amp; forms)</code></div><div class="doc"><pre class="plaintext">Print with console.warn.
-</pre></div></div><div class="public anchor" id="var-warn-unless"><h3>warn-unless</h3><h4 class="type">macro</h4><div class="usage"><code>(warn-unless cond &amp; forms)</code></div><div class="doc"><pre class="plaintext"></pre></div></div><div class="public anchor" id="var-warn-unless"><h3>warn-unless</h3><h4 class="type">macro</h4><div class="usage"><code>(warn-unless cond &amp; forms)</code></div><div class="doc"><pre class="plaintext"></pre></div></div></div></body></html>
+</pre></div></div><div class="public anchor" id="var-warn-unless"><h3>warn-unless</h3><h4 class="type">macro</h4><div class="usage"><code>(warn-unless cond &amp; forms)</code></div><div class="doc"><pre class="plaintext"></pre></div></div><div class="public anchor" id="var-warn-unless"><h3>warn-unless</h3><h4 class="type">macro</h4><div class="usage"><code>(warn-unless cond &amp; forms)</code></div><div class="doc"><pre class="plaintext"></pre></div></div></div><script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70923628-1', 'auto');
+  ga('send', 'pageview');
+
+</script></body></html>
