--- a/0.5.1/reagent.interop.html
+++ b/0.5.1/reagent.interop.html
@@ -15,4 +15,13 @@ If &apos;object&apos; is a symbol it is not allowed contain &apos;.&apos;.</pre>
 the name starts with &apos;-&apos;, otherwise the named function is
 called with the optional args.
 &apos;member&apos; may contain &apos;.&apos;, to allow access in nested objects.
-If &apos;object&apos; is a symbol it is not allowed contain &apos;.&apos;.</pre></div></div></div></body></html>
+If &apos;object&apos; is a symbol it is not allowed contain &apos;.&apos;.</pre></div></div></div><script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70923628-1', 'auto');
+  ga('send', 'pageview');
+
+</script></body></html>
