--- a/0.6.0-SNAPSHOT/reagent.core.html
+++ b/0.6.0-SNAPSHOT/reagent.core.html
@@ -106,4 +106,13 @@ Use for example like this:
 (wrap (:foo @state)
       swap! state assoc :foo)
 
-Probably useful only for passing to child components.</pre></div></div></div></body></html>
+Probably useful only for passing to child components.</pre></div></div></div><script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70923628-1', 'auto');
+  ga('send', 'pageview');
+
+</script></body></html>
