--- a/0.6.0-SNAPSHOT/reagent.dom.html
+++ b/0.6.0-SNAPSHOT/reagent.dom.html
@@ -13,4 +13,13 @@ either a vector (using Reagent&apos;s Hiccup syntax), or a React element. The se
 
 Optionally takes a callback that is called when the component is in place.
 
-Returns the mounted component instance.</pre></div></div><div class="public anchor" id="var-unmount-component-at-node"><h3>unmount-component-at-node</h3><div class="usage"><code>(unmount-component-at-node container)</code></div><div class="doc"><pre class="plaintext"></pre></div></div></div></body></html>
+Returns the mounted component instance.</pre></div></div><div class="public anchor" id="var-unmount-component-at-node"><h3>unmount-component-at-node</h3><div class="usage"><code>(unmount-component-at-node container)</code></div><div class="doc"><pre class="plaintext"></pre></div></div></div><script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70923628-1', 'auto');
+  ga('send', 'pageview');
+
+</script></body></html>
