--- a/0.6.0-SNAPSHOT/reagent.interop.html
+++ b/0.6.0-SNAPSHOT/reagent.interop.html
@@ -29,4 +29,13 @@ gives the same result under advanced compilation.</pre></div></div><div class="p
 If &apos;object&apos; is a symbol it is not allowed contain &apos;.&apos;.
 
 ($! o :foo 1) is equivalent to (set! (.-foo o) 1), except that it
-gives the same result under advanced compilation.</pre></div></div><div class="public anchor" id="var-..21"><h3>.!</h3><h4 class="type">macro</h4><div class="usage"><code>(.! &amp; args)</code></div><div class="doc"><pre class="plaintext"></pre></div></div><div class="public anchor" id="var-..21"><h3>.!</h3><h4 class="type">macro</h4><div class="usage"><code>(.! &amp; args)</code></div><div class="doc"><pre class="plaintext"></pre></div></div><div class="public anchor" id="var-..27"><h3>.&apos;</h3><h4 class="type">macro</h4><div class="usage"><code>(.&apos; &amp; args)</code></div><div class="doc"><pre class="plaintext"></pre></div></div><div class="public anchor" id="var-..27"><h3>.&apos;</h3><h4 class="type">macro</h4><div class="usage"><code>(.&apos; &amp; args)</code></div><div class="doc"><pre class="plaintext"></pre></div></div></div></body></html>
+gives the same result under advanced compilation.</pre></div></div><div class="public anchor" id="var-..21"><h3>.!</h3><h4 class="type">macro</h4><div class="usage"><code>(.! &amp; args)</code></div><div class="doc"><pre class="plaintext"></pre></div></div><div class="public anchor" id="var-..21"><h3>.!</h3><h4 class="type">macro</h4><div class="usage"><code>(.! &amp; args)</code></div><div class="doc"><pre class="plaintext"></pre></div></div><div class="public anchor" id="var-..27"><h3>.&apos;</h3><h4 class="type">macro</h4><div class="usage"><code>(.&apos; &amp; args)</code></div><div class="doc"><pre class="plaintext"></pre></div></div><div class="public anchor" id="var-..27"><h3>.&apos;</h3><h4 class="type">macro</h4><div class="usage"><code>(.&apos; &amp; args)</code></div><div class="doc"><pre class="plaintext"></pre></div></div></div><script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70923628-1', 'auto');
+  ga('send', 'pageview');
+
+</script></body></html>
