added more docs

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="container">
       <h2><a href="https://reagent-project.github.io/">Reagent</a> API Docs</h2>
       <h4>Versions</h4>
+      <h5><a href="0.6.0-alpha2/index.html">0.6.0-alpha2</a></h5>
       <h5><a href="0.6.0-SNAPSHOT/index.html">0.6.0-SNAPSHOT</a></h5>
       <h5><a href="0.5.1/index.html">0.5.1</a></h5>
     </div>
